GDF-5: Customer Meta Data
